--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ __pycache__/
 benchmark_set_split/
 thrombin/
 structures/
+fragment_dataset/
+fragment_dataset.tar.gz
+fragment_fullBinders_dataset/
+fragment_fullBinders_dataset.tar.gz
+benchmark_set_split/
