--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ fragment_dataset_redocking.tar.gz
 fragment_fullBinders_dataset.zip
 fragment_dataset_redocking.zip
 fragment_fullBinders_dataset_redocking.zip
+fragment_fullBinders_dataset_redocking/
