--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ fragment_fullBinders_dataset.zip
 fragment_dataset_redocking.zip
 fragment_fullBinders_dataset_redocking.zip
 fragment_fullBinders_dataset_redocking/
+fragment_dataset_add_bond_orders/
+fragment_fullBinders_dataset_add_bond_orders/
