--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ schrodinger.ve/
 benchmark_set_split_no_copy/
 fragment_mixed_dataset/
 fragment_mixed_dataset.zip
+fragment_mixed_dataset_partial/
